# lughat-althuban

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOVER-LARGE-PACKETS.md  README.md  ROADMAP-PHASE-B.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
apps/: README.md  تحليل_اخبار.apy  حاسبة_علمية.apy  خادم_ويب.apy  مدير_مهام.apy
arabicpython/: __init__.py  _fstring_311.py  cli.py  dialect.py  formatter.py  import_hook.py  linter.py  normalize.py  pretokenize.py  pytest_plugin.py  repl.py  test_runner.py  tracebacks.py  translate.py
arabicpython_kernel/: __init__.py  __main__.py  kernel.py
decisions/: 0008-phase-b-charter.md  README.md
dictionaries/: REVIEW-2026-04-19.md  ar-v1.md  exceptions-ar-v1.md
docs/: cookbook-ar-glossary.md  cookbook-ar.md  getting-started-ar.md  tutorial-ar-glossary.md  tutorial-ar.md
examples/: 01_hello.apy  02_arithmetic.apy  03_control_flow.apy  04_functions.apy  05_data_structures.apy  06_classes.apy  07_imports.apy  B01_http.apy  B10_flask_hello.apy  B30_README-ar.md  B30_filesystem_walk.apy  B31_functional_data.apy  B32_datetime_math.apy  B36_logging_demo.apy  B55_formatter_demo.apy  B56_linter_demo.apy  B57_seaborn_demo.apy  B58_scipy_demo.apy  B59_aiohttp_demo.apy  README-ar.md  README.md  helper.apy  اختبار_نموذجي.apy
specs/: 0001-dictionary-v1.md  0003-dialect-loader-v1.delivery.md  0004-pretokenize-v1.delivery.md  0006-cli-v1.md  0007-import-hook-v1.delivery.md  0008-repl-v1.delivery.md  0009-translated-tracebacks-v1.delivery.md  0010-examples-v1.delivery.md  0010-examples-v1.md  0011-fstring-interior-3-11.delivery.md  0012-arabic-docs-translation-v1.md  0013-search-engine-v1.delivery.md  0014-prayer-times-v1.delivery.md  B-001-alias-runtime-v1.md  (+37 more)
(+129 files in other folders)
