[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apython"
version = "0.0.1"
description = "لغة الثعبان — a Python dialect with Arabic keywords, built-ins, and exceptions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "apython contributors" }]
keywords = ["python", "arabic", "dialect", "education", "transpiler"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Arabic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "requests>=2.32",
]

[project.scripts]
"ثعبان" = "arabicpython.cli:main"

[tool.setuptools.packages.find]
include = ["arabicpython*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "network: marks tests that make real HTTP calls (deselect with -m 'not network')",
]
